--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sitio Web 2015</title>
+    <title>Sitio Web 2018</title>
 </head>
 <body>
-    <h1>Sitio Web 2015</h1>
+    <h1>Sitio Web 2018</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto, numquam. Dolores provident quam sed numquam labore! Ipsum soluta delectus, inventore impedit perferendis laudantium perspiciatis qui ab nihil. Soluta, distinctio obcaecati.</p>
 </body>
 </html>
