--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>Sitio Web 2018</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto, numquam. Dolores provident quam sed numquam labore! Ipsum soluta delectus, inventore impedit perferendis laudantium perspiciatis qui ab nihil. Soluta, distinctio obcaecati.</p>
+    <main>
+        <h3>Mensaje Principal</h3>
+    </main>
 </body>
 </html>
