--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
     <main>
         <h3>Mensaje Principal</h3>
     </main>
+    <footer>
+        <h3>Mi Footer</h3>
+    </footer>
 </body>
 </html>
