--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Sitio Web 2018</title>
 </head>
 <body>
+    <header>
+        <h3>Mi Header</h3>
+    </header>
     <h1>Sitio Web 2018</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto, numquam. Dolores provident quam sed numquam labore! Ipsum soluta delectus, inventore impedit perferendis laudantium perspiciatis qui ab nihil. Soluta, distinctio obcaecati.</p>
     <main>
