Propuesta seccion facebook

--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
     <main>
         <h3>Mensaje Principal</h3>
     </main>
+    <section>
+        <h1>Seccion de facebook</h1>
+    </section>
 </body>
 </html>
